--- a/articles/blockchain/service/TOC.yml
+++ b/articles/blockchain/service/TOC.yml
@@ -47,6 +47,8 @@
       href: manage-consortium-powershell.md
 - name: Resurser
   items:
+    - name: Blockchain REST API
+      href: 'https://docs.microsoft.com/rest/api/blockchain/'
     - name: Blogg
       href: 'https://azure.microsoft.com/blog/topics/blockchain/'
     - name: Visual Studio Code-tillägg för Azure Blockchain Service
@@ -56,7 +58,7 @@
     - name: Community
       href: 'https://techcommunity.microsoft.com/t5/Blockchain/bd-p/AzureBlockchain'
     - name: Forum
-      href: 'https://social.msdn.microsoft.com/forums/security/home?forum=AzureBlockchainService'
+      href: 'https://social.msdn.microsoft.com/Forums/home?forum=azureblockchain'
     - name: Produktfeedback
       href: 'https://feedback.azure.com/forums/921130-azure-blockchain-service'
     - name: Prissättning
