--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -99,7 +99,7 @@
       href: luis-concept-best-practices.md
       displayName: 'phrase list, pattern, intent, utterance, version, do, don''t, example utterances, iteration, cycle, correct, right'
     - name: Planera din app
-      displayName: 'simple, hierarchical, composite, prebuilt, list, regex, regular expression'
+      displayName: 'simple, composite, prebuilt, list, regex, regular expression'
       href: luis-how-plan-your-app.md
     - name: Redigera app
       items:
@@ -116,7 +116,7 @@
         - name: Avsikter
           href: luis-concept-intent.md
         - name: Entiteter
-          displayName: 'prebuilt, custom, regular expression, regex, simple, list, pattern.any, composite, hierarchical, machine-learn, exact, mixed, roles'
+          displayName: 'prebuilt, custom, regular expression, regex, simple, list, pattern.any, composite, machine-learn, exact, mixed, roles'
           href: luis-concept-entity-types.md
         - name: Yttranden
           href: luis-concept-utterance.md
@@ -218,12 +218,15 @@
                   href: luis-tutorial-bot-csharp-appinsights.md
     - name: Förbättra förutsägelsefunktionen
       items:
-        - name: Granska slutpunktsyttranden
-          displayName: active learning
-          href: luis-how-to-review-endpoint-utterances.md
+        - name: Använd instrumentpanelen
+          displayName: 'dashboard, analytics, charts, data, unclear predictions, incorrect predictions, imbalance, endpoint hits, status, evaluation, accuracy, active version, problematic intents, nearest rival, usage'
+          href: luis-how-to-use-dashboard.md
         - name: Lägg till fraslista
           displayName: 'synonym, interchange'
           href: luis-how-to-add-features.md
+        - name: Granska slutpunktsyttranden
+          displayName: active learning
+          href: luis-how-to-review-endpoint-utterances.md
         - name: Lägg till mönster
           displayName: 'syntax, template, roles'
           href: luis-how-to-model-intent-pattern.md
@@ -235,14 +238,11 @@
           href: luis-interactive-test.md
         - name: Batch-testning
           href: luis-how-to-batch-test.md
-          displayName: import
+          displayName: 'import, export'
     - name: Publicera
       href: luis-how-to-publish-app.md
     - name: Hantera app
       items:
-        - name: Använd instrumentpanelen
-          displayName: 'analytics, usage'
-          href: luis-how-to-use-dashboard.md
         - name: Använda prenumerationsnycklar med LUIS-appen
           displayName: 'azure portal, resource, assign key, add key, out of quota, 403, 429, luis portal, key assignment, subscription'
           href: luis-how-to-azure-subscription.md
@@ -256,12 +256,17 @@
           href: luis-how-to-account-settings.md
         - name: Fördela slutpunktskvoten mellan nycklar med Traffic Manager
           href: luis-traffic-manager.md
-    - name: Migrera till V2 REST API
-      href: luis-migration-api-v1-to-v2.md
+    - name: Migrera API
+      items:
+        - name: Migrera till V2 REST API
+          href: luis-migration-api-v1-to-v2.md
+        - name: Migrera till V3 REST API
+          href: luis-migration-api-v3.md
+          displayName: 'json, response, verbose, dynamic, dynamic list object, brackets, array, role, show-all-intents,prebuilt domain, domain, external entities, "$instance",TimezoneOffset, datetimeReference'
     - name: Använda containrar
       items:
         - name: Installera och köra containrar
-          displayName: 'docker, container, package, packaged app, swagger, open api, openapi, train, publish, az, acr, cli, tps, core, curl, try it now, import, pull'
+          displayName: 'docker, container, package, packaged app, swagger, open api, openapi, train, publish, az, acr, cli, tps, core, curl, try it now, import, pull, export to container'
           href: luis-container-howto.md
         - name: Konfigurera containrar
           href: luis-container-configuration.md
@@ -269,7 +274,7 @@
   items:
     - name: Användarsekretess
       href: luis-user-privacy.md
-    - name: Redigera och publicera regioner
+    - name: Regioner
       href: luis-reference-regions.md
       displayName: 'failover, fail-over, fail over, Europe, EU, Australia, business continuity, bcdr'
     - name: Gränser
@@ -284,6 +289,7 @@
           href: luis-reference-prebuilt-currency.md
         - name: DatetimeV2-entitet
           href: luis-reference-prebuilt-datetimev2.md
+          displayName: timex
         - name: Entitet för dimension
           href: luis-reference-prebuilt-dimension.md
         - name: Inaktuella entiteter
@@ -310,6 +316,7 @@
           href: luis-reference-prebuilt-url.md
     - name: Fördefinierad domänreferens
       href: luis-reference-prebuilt-domains.md
+      displayName: 'Calendar, Communication,Email,HomeAutomation,Note,Places, RestaurantReservation,ToDo,Utilities,Weather,Web'
     - name: Azure CLI
       href: 'https://aka.ms/az-cli-cognitiveservices'
     - name: Azure RM PowerShell
