--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -74,6 +74,8 @@
       href: powershell-samples.md
     - name: Azure CLI
       href: cli-samples.md
+    - name: Azure Resource Manager
+      href: resource-manager-samples.md
 - name: Begrepp
   items:
     - name: Global distribution
@@ -203,6 +205,9 @@
           href: firewall-support.md
         - name: Åtkomst från virtuella nätverk
           href: vnet-service-endpoint.md
+        - name: Rollbaserad åtkomstkontroll
+          displayName: rbac
+          href: role-based-access-control.md
     - name: Företagsberedskap
       items:
         - name: Säkerhetskopiering och återställning på begäran online
@@ -266,6 +271,8 @@
                   href: cassandra-spark-aggregation-ops.md
                 - name: Kopiera tabelldata
                   href: cassandra-spark-table-copy-ops.md
+            - name: Hantera med Resource Manager-mallar
+              href: manage-cassandra-with-resource-manager.md
     - name: MongoDB-API
       items:
         - name: Introduktion
@@ -343,6 +350,8 @@
             - name: Kommandon för MongoDB-tillägg
               href: mongodb-custom-commands.md
               displayName: custom commands
+            - name: Hantera med Resource Manager-mallar
+              href: manage-mongodb-with-resource-manager.md
     - name: Gremlin-API
       displayName: 'graph, graph database'
       items:
@@ -379,6 +388,8 @@
             - name: Lagra och hantera Spring Data
               href: /java/azure/spring-framework/configure-spring-data-gremlin-java-app-with-cosmos-db
               maintainContext: true
+            - name: Hantera med Resource Manager-mallar
+              href: manage-gremlin-with-resource-manager.md
     - name: Tabell-API
       items:
         - name: Introduktion
@@ -429,6 +440,8 @@
               href: table-support.md
             - name: Designguide för tabellagring
               href: table-storage-design-guide.md
+            - name: Hantera med Resource Manager-mallar
+              href: manage-table-with-resource-manager.md
         - name: Referens
           items:
             - name: .NET
@@ -443,6 +456,16 @@
               href: table-sdk-python.md
             - name: 'REST-API:er för tabellagring'
               href: /rest/api/storageservices/Table-Service-Concepts
+    - name: Etcd-API
+      items:
+        - name: Introduktion
+          href: etcd-api-introduction.md
+        - name: Azure Kubernetes med Azure Cosmos DB
+          href: bootstrap-kubernetes-cluster.md
+    - name: Spark-API
+      items:
+        - name: Introduktion
+          href: spark-api-introduction.md
 - name: Instruktionsguider
   items:
     - name: Hantera ett Azure Cosmos-konto
@@ -473,11 +496,15 @@
       items:
         - name: Skapa en container
           href: how-to-create-container.md
+        - name: Skapa en container med en stor partitionsnyckel
+          href: large-partition-keys.md
         - name: Fråga en container
           href: how-to-query-container.md
         - name: Datamodellering och partitionering – ett verkligt exempel
           displayName: 'model, partition, example'
           href: how-to-model-partition-example.md
+        - name: Migrera till partitionerade containrar
+          href: migrate-containers-partitioned-to-nonpartitioned.md
         - name: Ställ in TTL (Time To Live)
           displayName: 'delete, delete data, ttl'
           href: how-to-time-to-live.md
@@ -521,9 +548,11 @@
     - name: Hantera Azure Cosmos DB-resurser
       items:
         - name: Hantera med hjälp av PowerShell
-          href: manage-account-with-powershell.md
+          href: manage-with-powershell.md
         - name: Hantera med hjälp av Azure CLI
           href: manage-with-cli.md
+        - name: Hantera med Resource Manager-mallar
+          href: manage-sql-with-resource-manager.md
     - name: Loggning
       items:
         - name: Diagnostikloggning
@@ -652,7 +681,7 @@
     - name: REST-resursprovider
       href: /rest/api/cosmos-db-resource-provider/
     - name: Resource Manager-mall
-      href: /azure/templates/microsoft.documentdb/databaseaccounts
+      href: /templates/microsoft.documentdb/allversions
 - name: Resurser
   items:
     - name: Utveckla dina färdigheter med Microsoft Learn
