--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -109,8 +109,14 @@
           href: how-to-install-iot-edge-linux-arm.md
         - name: Windows X64
           href: how-to-install-iot-edge-windows.md
+        - name: Linux-containrar på Windows X64
+          href: how-to-install-iot-edge-windows-with-linux.md
+        - name: Virtuell Windows Server-dator
+          href: how-to-install-iot-edge-windows-server-vm.md
         - name: Virtuell Ubuntu-dator
           href: how-to-install-iot-edge-ubuntuvm.md
+        - name: Kubernetes
+          href: how-to-install-iot-edge-kubernetes.md
         - name: Uppdatera körningsversion
           href: how-to-update-iot-edge.md
     - name: Automatisk etablering med DPS
