--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -16,6 +16,8 @@
   items:
     - name: Platser och partners
       href: virtual-wan-locations-partners.md
+    - name: Global arkitektur för nätverksöverföring
+      href: virtual-wan-global-transit-architecture.md
     - name: Office 365-kontrollplanet i virtuellt WAN-nätverk
       href: virtual-wan-office365-overview.md
 - name: Instruktionsguider
